--- a/txt/news.txt
+++ b/txt/news.txt
@@ -1,3 +1,8 @@
+实验室活动预告：完成arduino项目的制作 $Vertex @Dec.26,2015
+	>>实验室活动预告：完成arduino项目的制作
+	实验室活动预告：完成arduino项目的制作
+	要求：使用热电／压电等传感，做一个有趣的杯垫
+
 实验室活动预告：填写材料购买清单，完成项目Pre-Proposal $Vertex @Dec.15,2015
   >>实验室活动预告：填写材料购买清单，完成项目Pre-Proposal
   实验室活动预告：填写材料购买清单，完成项目Pre-Proposal
