many things added

--- a/txt/news.txt
+++ b/txt/news.txt
@@ -1,3 +1,8 @@
+实验室第一期材料购买清单已经提交
+	>>实验室第一期材料购买清单已在12月30日由邱楠老师提交给学校
+	实验室第一期材料购买清单已在12月30日由邱楠老师提交给学校
+	第一期材料清单下载：第一期材料清单.zip
+
 实验室活动预告：完成arduino项目的制作 $Vertex @Dec.26,2015
 	>>实验室活动预告：完成arduino项目的制作
 	实验室活动预告：完成arduino项目的制作
@@ -8,6 +13,6 @@
   实验室活动预告：填写材料购买清单，完成项目Pre-Proposal
 
 实验室材料购买清单模板发布 $Vertex @Dec.14, 2015
-  >>请将项目所需材料按照模板填写完毕，发至tower，Vertex将转交至邱楠老师。
-  请将项目所需材料按照模板填写完毕，发至tower，Vertex将转交至邱楠老师。
+  >>请将项目所需材料按照模板填写完毕，发至tower，Vertex将转交至邱楠老师
+  请将项目所需材料按照模板填写完毕，发至tower，Vertex将转交至邱楠老师
   链接：能量系统实验室项目采购清单-模板.xlsx
